# genonets

./: .gitignore  .readthedocs.yaml  CITATION  CLAUDE.md  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  README.txt  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: api.rst  cmd_args.rst  concepts_and_terminology.rst  conf.py  custom_genetic_code.rst  index.rst  input_format.rst  result_attributes.rst
genonets/: __init__.py  accessibility_functions.py  analysis_handler.py  cmdl_handler.py  config.py  constants.py  covering_functions.py  epistasis_functions.py  errors.py  evolvability_functions.py  filters.py  genonets_constants.py  genonets_exceptions.py  genonets_filters.py  genonets_interface.py  genonets_reader.py  genonets_utils.py  genonets_writer.py  graph_utils.py  interface.py  landscape_functions.py  overlap_functions.py  path_functions.py  peak_functions.py  peak_functions_new.py  reader.py  robustness_functions.py  seq_align.py  seq_bit_impl.py  seq_bit_lib.py  structure_functions.py  test_align.py  test_align.py.lprof  utils.py  writer.py
genonets/sample/: config.cfg  custom.py  genonets_exmpl_custom.py  genonets_exmpl_minimal.py  genonets_exmpl_parallel.py  genonets_exmpl_selective.py  genonets_exmpl_simple.py  minimal.py  parallel.py  paths_sample.py  selective.py  simple.py
genonets/test/: compare_result_files.py  test_binary.py  test_dna.py  test_epistasis.py  test_interface_edges.py  test_paths.py  test_peaks.py  test_protein.py  test_rna.py  utils.py
genonets/test/data/ground_truth/binary/no_indels/: (0,0),(1,1),(2,2),(3,3),(4,4),(6,6),(7,7)_genotype_measures.tsv  in_params.tsv  (+20 more)
genonets/test/data/inputs/binary/: config_no_indels.cfg  config_with_indels.cfg  input_binary_small.tsv
genonets/test/data/inputs/dna/: config_no_indels_no_rc.cfg  config_no_indels_with_rc.cfg  config_with_indels_no_rc.cfg  config_with_indels_with_rc.cfg  input_dna-mus.txt  input_sample_dna-mus.tsv
genonets/test/data/inputs/epistasis/: code_standard.tsv  test10_input.tsv  test11_input.tsv  test12_input.tsv  test13_input.tsv  test14_input.tsv  test15_input.tsv  test16_input.tsv  test17_input.tsv  test18_input.tsv  test19_input.tsv  test20_input.tsv  test21_input.tsv  test22_input.tsv  test3_input.tsv  test4_input.tsv  test5_input.tsv  test6_input.tsv  test7_input.tsv  test8_input.tsv  test9_input.tsv
genonets/test/data/inputs/paths/: test10_input.tsv  test11_input.tsv  test12_input.tsv  test13_input.tsv  test1_input.tsv  test2_input.tsv  test4_input.tsv  test5_input.tsv  test6_input.tsv  test7_input.tsv  test8_input.tsv  test9_input.tsv
genonets/test/data/inputs/peaks/: test10_input.tsv  test11_input.tsv  test12_input.tsv  test13_input.tsv  test2_input.tsv  test4_input.tsv  test6_input.tsv  test7_input.tsv  test9_input.tsv
genonets/test/data/inputs/protein/: config_no_indels.cfg  config_with_indels.cfg  input_h3nb.tsv
genonets/test/data/inputs/rna/: config_celegans.cfg  config_drosophila.cfg  config_human_no_indels.cfg  config_human_with_indels.cfg  input_rna-celegans.txt  input_rna-drosophila.txt  input_rna-human.tsv
(+415 files in other folders)
