[tool.poetry]
name = "genonets"
version = "2.0"
description = "Framework for creating and analyzing genotype networks from."
authors = ["Fahad Khalid <genonets@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fkhalid/genonets"
repository = "https://github.com/fkhalid/genonets"
documentation = "https://genonets.readthedocs.io"
keywords = ["genonets", "genotype", "phenotype", "network"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [
    { include = "genonets" }
]
exclude = ["genonets/test"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19"
tqdm = "^4.49.0"
python-igraph = "0.8.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
black = "^24.3"
pytest = "^6.2.2"
coverage = "^5.5"
sphinx = "4.1.2"
pandas = "^1.1.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"