[project]
name = "genonets"
version = "2.0"
description = "Framework for creating and analyzing genotype networks."
authors = [{ name = "Fahad Khalid", email = "genonets@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["genonets", "genotype", "phenotype", "network"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.19",
    "tqdm>=4.49.0",
    "igraph>=0.10",
    "urllib3>=2.6.3",
]

[project.urls]
Homepage = "https://github.com/fkhalid/genonets"
Repository = "https://github.com/fkhalid/genonets"
Documentation = "https://genonets.readthedocs.io"

[dependency-groups]
dev = [
    "pylint>=2.4",
    "black>=26.3.1",
    "pytest>=9.0.3",
    "coverage>=5.5",
    "sphinx==4.1.2",
    "pandas>=1.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genonets"]
exclude = ["genonets/test"]
